[package]
name = "my_unique_project"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"   # For generating random numbers
chrono = "0.4"   # For working with dates and times
serde = { version = "1.0", features = ["derive"] }  # For serialization/deserialization
reqwest = "0.11" # For making HTTP requests
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

